[package]
name = "pbmx"
version = "0.1.99"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"
description = "Secure play-by-mail toolkit"

[dependencies.pbmx-kit]
path = "../pbmx-kit"

[dependencies.base64]
version = "0.12"

[dependencies.clap]
version = "2.0"

[dependencies.colored]
version = "1.7"

[dependencies.curve25519-dalek]
version = "2.0"

[dependencies.itertools]
version = "0.9"

[dependencies.rand]
version = "0.7"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.toml]
version = "0.5"
