[package]
name = "pbmx"
version = "0.1.99"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"
description = "Secure play-by-mail toolkit"

[dependencies.pbmx-kit]
path = "../pbmx-kit"

[dependencies.base64]
version = "0.13"

[dependencies.clap]
version = "2"

[dependencies.colored]
version = "2"

[dependencies.curve25519-dalek]
package = "curve25519-dalek-ng"
version = "4"

[dependencies.itertools]
version = "0.10"

[dependencies.rand]
version = "0.8"

[dependencies.serde]
version = "1"

[dependencies.serde_derive]
version = "1"

[dependencies.toml]
version = "0.5"
