[package]
name = "pbmx-kit"
version = "0.1.99"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[dependencies.base64]
version = "0.12"

[dependencies.bincode]
version = "1.0"

[dependencies.bytes]
version = "0.5"

[dependencies.curve25519-dalek]
version = "2.0"
features = ["serde"]

[dependencies.digest]
version = "0.8"

[dependencies.merlin]
version = "2.0"

[dependencies.nom]
version = "5.0"

[dependencies.qp-trie]
version = "0.7"

[dependencies.prost]
version = "0.6"

[dependencies.rand]
version = "0.7"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.subtle]
version = "2.0"

[dependencies.tiny-keccak]
git = "https://github.com/rmartinho/tiny-keccak.git"
features = ["k12"]

[dependencies.tribool]
version = "0.2"

[build-dependencies.prost-build]
version = "0.6"
