[package]
name = "pbmx-kit"
version = "0.1.99"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[dependencies.base64]
version = "0.12"

[dependencies.bincode]
version = "1.0"

[dependencies.bytes]
version = "0.5"

[dependencies.curve25519-dalek]
version = "2.0"
features = ["serde"]

[dependencies.digest]
version = "0.8"

[dependencies.merlin]
version = "2.0"

[dependencies.qp-trie]
version = "0.7"

[dependencies.pest]
version = "2.1"

[dependencies.pest_derive]
version = "2.1"

[dependencies.prost]
version = "0.6"

[dependencies.rand]
version = "0.7"

[dependencies.schnorrkel]
version = "0.9.1"
features = ["serde"]

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.subtle]
version = "2.0"

[dependencies.tiny-keccak]
version = "2.0"
features = ["k12"]

[dependencies.tribool]
version = "0.2"

[build-dependencies.prost-build]
version = "0.6"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3"
features = ["Crypto", "Window"]
