[package]
name = "pbmx-kit"
version = "0.1.99"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[dependencies.base64]
version = "0.13"

[dependencies.bytes]
version = "1"

[dependencies.curve25519-dalek]
package = "curve25519-dalek-ng"
version = "4"

[dependencies.digest]
version = "0.9"

[dependencies.merlin]
version = "3"

[dependencies.qp-trie]
version = "0.7"

[dependencies.pest]
version = "2"

[dependencies.pest_derive]
version = "2"

[dependencies.prost]
version = "0.7"

[dependencies.rand]
version = "0.8"

[dependencies.schnorrkel]
version = "0.10"

[dependencies.subtle]
package = "subtle-ng"
version = "2"

[dependencies.tiny-keccak]
version = "2"
features = ["k12"]

[dependencies.tribool]
version = "0.2"

[build-dependencies.prost-build]
version = "0.7"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3"
features = ["Crypto", "Window"]
