[package]
name = "pbmx-web"
version = "0.1.99"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies.pbmx-kit]
path = "../pbmx-kit"

[dependencies.base64]
version = "0.12"

[dependencies.js-sys]
version = "0.3"

[dependencies.rand]
version = "0.7"

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["Crypto", "Window"]

[dependencies.console_error_panic_hook]
version = "0.1.1"
optional = true

[dependencies.wee_alloc]
version = "0.4.2"
optional = true

[dev-dependencies.wasm-bindgen-test]
version = "0.2"

[profile.release]
lto = true
opt-level = "z"
