[package]
name = "pbmx_chain"
version = "0.1.0"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[dependencies.pbmx_curve]
path = "../pbmx_curve"

[dependencies.pbmx_serde]
path = "../pbmx_serde"

[dependencies.base64]
version = "0.10"

[dependencies.bincode]
version = "1.0"

[dependencies.curve25519-dalek]
version = "1.0"

[dependencies.digest]
version = "0.8"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.tribool]
version = "0.2"

[dev-dependencies.rand]
version = "0.6"
