[package]
name = "pbmx_cli"
version = "0.1.0"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[dependencies.pbmx_blocks]
path = "../pbmx_blocks"

[dependencies.pbmx_crypto]
path = "../pbmx_crypto"

[dependencies.pbmx_serde]
path = "../pbmx_serde"

[dependencies.clap]
version = "2.32"

[dependencies.colored]
version = "1.7"

[dependencies.rand]
version = "0.6"

[dependencies.rustyline]
version = "3.0"
