[package]
name = "pbmx"
version = "0.1.0"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"
description = "Secure play-by-mail toolkit"

[dependencies.pbmx_chain]
path = "../pbmx_chain"

[dependencies.pbmx_curve]
path = "../pbmx_curve"

[dependencies.pbmx_serde]
path = "../pbmx_serde"

[dependencies.base64]
version = "0.10"

[dependencies.bincode]
version = "1.0"

[dependencies.clap]
version = "2.32"

[dependencies.colored]
version = "1.7"

[dependencies.curve25519-dalek]
version = "1.0"

[dependencies.qp-trie]
version = "0.7"

[dependencies.rand]
version = "0.6"
