[package]
name = "pbmx"
version = "0.1.0"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"
description = "Secure play-by-mail toolkit"

[dependencies.pbmx_kit]
path = "../pbmx_kit"

[dependencies.base64]
version = "0.10"

[dependencies.bincode]
version = "1.0"

[dependencies.clap]
version = "2.32"

[dependencies.colored]
version = "1.7"

[dependencies.digest]
version = "0.8"

[dependencies.curve25519-dalek]
version = "1.0"

[dependencies.nom]
version = "4.2"

[dependencies.qp-trie]
git = "https://github.com/messense/qp-trie-rs"
branch = "fix-compilation"

[dependencies.rand]
version = "0.6"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.toml]
version = "0.4"
