[package]
name = "pbmx_core"
version = "0.1.0"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[dependencies.base64]
version = "0.10"

[dependencies.bincode]
version = "1.0"

[dependencies.digest]
version = "0.8"

[dependencies.rand]
version = "0.6"

[dependencies.ripemd160]
version = "0.8"

[dependencies.rug]
version = "1.2"
default-features = false
features = ["integer", "rand", "serde"]

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"
