[package]
name = "pbmx_crypto"
version = "0.1.0"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[dependencies.pbmx_num]
path = "../pbmx_num"

[dependencies.rug]
version = "1.2"
default-features = false
features = ["integer", "rand", "serde"]

[dependencies.rand]
version = "0.6"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"
