[package]
name = "pbmx_ffi"
version = "0.1.0"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.pbmx_kit]
path = "../pbmx_kit"

[dependencies.curve25519-dalek]
version = "1.0"

[dependencies.digest]
version = "0.8"

[dependencies.libc]
version = "0.2"

[dependencies.rand]
version = "0.6"
