[package]
name = "pbmx_kit"
version = "0.1.0"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[dependencies.base64]
version = "0.10"

[dependencies.bincode]
version = "1.0"

[dependencies.curve25519-dalek]
version = "1.0"

[dependencies.digest]
version = "0.8"

[dependencies.merlin]
version = "1.0"

[dependencies.nom]
version = "4.2"

[dependencies.phf]
version = "0.7"

[dependencies.qp-trie]
version = "0.7"

[dependencies.rand]
version = "0.6"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.sha3]
version = "0.8"

[dependencies.subtle]
version = "2.0"

[dependencies.tribool]
version = "0.2"

[dependencies.zkp]
version = "0.5"

[build-dependencies.curve25519-dalek]
version = "1.0"

[build-dependencies.phf_codegen]
version = "0.7"
