[package]
name = "pbmx_kit"
version = "0.1.0"
authors = ["R. Martinho Fernandes <rmf@rmf.io>"]
edition = "2018"

[dependencies.base64]
version = "0.10"

[dependencies.bincode]
version = "1.0"

[dependencies.bitvec]
version = "0.14"

[dependencies.bytes]
version = "0.4"

[dependencies.curve25519-dalek]
version = "1.0"
features = ["serde"]

[dependencies.digest]
version = "0.8"

[dependencies.merlin]
version = "1.0"

[dependencies.nom]
version = "4.2"

[dependencies.qp-trie]
git = "https://github.com/messense/qp-trie-rs"
branch = "fix-compilation"

[dependencies.prost]
version = "0.5"

[dependencies.prost-build]
version = "0.5"

[dependencies.rand]
version = "0.6"

[dependencies.serde]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.sha3]
version = "0.8"

[dependencies.subtle]
version = "2.0"

[dependencies.tribool]
version = "0.2"

[build-dependencies.prost-build]
version = "0.5"
